# kafka-client

./: Cargo.toml  README.md  docker-compose.yml
src/: backoff.rs  codec.rs  config.rs  main.rs  response.rs  transport.rs
src/client/: client.rs  mod.rs  shutdown.rs
src/client/codec/: correlated.rs  mod.rs  request.rs  sendable.rs
src/clients/: network.rs
src/clients/admin/: describe_cluster.rs  list_topics.rs  mod.rs
src/cmd/: admin.rs  mod.rs  producer.rs
src/conn/: channel.rs  config.rs  conn.rs  host.rs  manager.rs  mod.rs  prepared.rs  request.rs
src/conn/codec/: correlated.rs  mod.rs  request.rs  sendable.rs
src/conn/manager/: host.rs  mod.rs  node.rs
src/conn/selector/: connect.rs  metadata.rs  mod.rs  node_task.rs  selector.rs
src/manager/: manager.rs  mod.rs  version.rs
src/proto/: error_codes.rs  mod.rs  request.rs  ver.rs
