[package]
name = "kafka-client"
version = "0.1.0"
edition = "2021"
description = "A kafka client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.15", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "6.0.1"
derive_more = { version = "1.0.0", features = ["from"] }
extend = "1.2.0"
fnv = "1.0.7"
futures = "0.3.30"
futures-util = "0.3.30"
kafka-protocol = "0.10.0"
pin-project-lite = "0.2.14"
rand = "0.8.5"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec", "rt"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
want = "0.3.1"

[dev-dependencies]
tokio-test = "0.4.4"
